--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "canvas": "^2.6.1",
     "d3": "^5.16.0",
     "d3-cloud": "^1.2.5",
+    "ioredis": "^4.17.3",
     "jsdom": "^16.4.0",
-    "mecab-async": "^0.1.2",
     "node-cron": "^2.0.3",
     "oslllo-svg2": "0.0.1",
+    "segfault-handler": "^1.3.0",
     "twit": "^2.2.11",
     "whatwg-url": "^8.1.0"
   }
