--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   "license": "MIT",
   "dependencies": {
     "canvas": "^2.6.1",
+    "convert-svg-to-png": "^0.5.0",
     "d3": "^5.16.0",
     "d3-cloud": "^1.2.5",
-    "ioredis": "^4.17.3",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "ioredis": "^4.19.4",
     "jsdom": "^16.4.0",
     "node-cron": "^2.0.3",
     "oslllo-svg2": "0.0.1",
+    "puppeteer": "^5.5.0",
     "segfault-handler": "^1.3.0",
+    "socket.io": "^2.4.1",
     "twit": "^2.2.11",
-    "whatwg-url": "^8.1.0"
+    "whatwg-url": "^8.4.0"
   }
 }
