--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "canvas": "^2.6.1",
     "d3": "^5.16.0",
     "d3-cloud": "^1.2.5",
+    "date-utils": "^1.2.21",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
