--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsdom": "^16.4.0",
     "node-cron": "^2.0.3",
     "oslllo-svg2": "^0.2.2",
+    "request-promise": "^4.2.6",
     "segfault-handler": "^1.3.0",
     "twit": "^2.2.11",
     "whatwg-url": "^8.4.0"
